# LIBRPO

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  README_INSTALL.md  bin.rar  folder_structure.txt  include_path.txt  old.clang-format  scripts.cmd  scripts.sh  thanhvien.txt  todo.md
googletest/linux/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: AccountChoose.h  Browse.h  CommonLib.h  Find.h  FindBook.h  History.h  Login.h  ReadBook.h  ReadBookJSON.h  ReadData.h  ReadDataJSON.h  Setting.h  Show.h  SignUp.h  Utilities.h  Welcome.h  modify.h
include/Book/: ReadBookJSON.h
include/Browse/: Browse.h
include/Data/: ReadDataJSON.h  modify.h
include/Find/: Find.h  FindBook.h
include/History/: History.h
include/Login/: Login.h
include/Setting/: Setting.h
include/SignUp/: SignUp.h
include/SuperAdmin/: SuperAdmin.h
include/Utilities/: Accountant.h  Admin.h  Audio.h  Documentary.h  Ebook.h  Librarian.h  Money.h  NhaSuuTam.h  Reader.h  Reviewer.h  Utilities.h
include/Welcome/: Screens.h  Welcome.h
include/struct/: LoggedInUser.h  NewBook.h  NewUser.h  Role.h
json_bookdata/: book.json  find.cpp  findbook.cpp  findbook.h  genre.txt  json.hpp
obsolete/: BrowseBorrowBook.cpp  GetBookAuthentication.cpp
obsolete/ReadBook/: Book.cpp  ReadBook.cpp  ReadBook.h
obsolete/ReadData/: AccountRole.cpp  ReadData.cpp  ReadData.h  ReadLock.cpp  ShowData.cpp
obsolete/book/: content.txt  genre.txt
obsolete/user/: account.txt  accountrolemap.txt
reportLIBPRO/: document.aux  document.out  document.tex  document1.tex
spike/: CMakeLists.txt  a not important file.txt
src/: Author.cpp  Book.cpp  Browse.cpp  CommonLib.cpp  Find.cpp  ReadBook.cpp  Setting.cpp  ShowAllBook.cpp  ShowBook.cpp  UpdatePassword.cpp  Utilities.cpp  Welcome.cpp  globalvar.cpp  main.cpp  version.h  version.h.in
src/AccountChoose/: AccountChoose.cpp
src/AdminHiddenLogin/: AdminHiddenLogin.cpp  HiddenPassword.cpp
src/Browse/: Addto.cpp  Browse.cpp  ChooseBook.cpp  FindBook.cpp  ShowAllBook.cpp  ShowBookJSON.cpp
src/Find/: Find.cpp  FindBook.cpp  ISBNtoJSON.cpp  SearchBook.cpp
src/History/: History.cpp
src/Login/: Login.cpp
src/ReadBook/: Book.cpp  Genre.cpp  ReadBook.cpp  ShowBook.cpp
src/ReadBookJSON/: ReadBookJSON.cpp  ShowBookJSON.cpp
src/ReadData/: AccountRole.cpp  Author.cpp  ReadData.cpp  ReadLock.cpp  ReadUser.cpp  ShowData.cpp
src/ReadDataJSON/: ReadDataJSON.cpp
src/Setting/: ChangePassword.cpp  LockAllAccount.cpp  Setting.cpp  UpdatePassword.cpp
src/SignUp/: AccountCreation.cpp  Random.cpp  SignUp.cpp  add_success.cpp  delete_success.cpp
src/Utilities/: Utilities.cpp
src/Utilities/Accountant/: Accountant.cpp  BrowseBorrowBook.cpp  GiveBook.cpp
src/Utilities/Admin/: AddUser.cpp  Admin.cpp  DeleteUser.cpp  NewADMINgroup.cpp  PwdReset.cpp  UserLock.cpp
src/Utilities/Audio/: Audio.cpp
src/Utilities/Documentary/: Documentary.cpp
src/Utilities/Ebook/: Ebook.cpp
src/Utilities/Librarian/: AddBook.cpp  AutoReject.cpp  BrowseBorrowBook.cpp  GiveBook.cpp  Librarian.cpp
src/Utilities/Money/: Charge.cpp  Money.cpp
src/Utilities/NhaSuuTam/: Nhasuutam.cpp
src/Utilities/Reader/: BorrowBook.cpp  LateReturn.cpp  Reader.cpp  ReturnBook.cpp  ShowFavCartBorrow.cpp
src/Utilities/Reviewer/: Reviewer.cpp
src/Welcome/: Screens.cpp  Welcome.cpp
test/: CMakeLists.txt
test/src/: BorrowBook.cpp  BrowseBorrowBook.cpp  FindAdvance.cpp  FindAdvance.h  GetBookAuthentication.cpp  Login_unittest.cpp  demo.cpp
